"Unit Test CompanyController - Add create method CompanyController"